# nostro_fastapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/config/: environments.py  manager.py
app/middlewares/: api.py
app/routes/: activate_account.py  change_user_group.py  close_account_positions.py  close_account_positions_by_symbol.py  create_mt5_account.py  dealer_sink.py  delete_account.py  delete_pending_orders.py  disable_account.py  enable_account.py  get_account_group.py  get_account_status_data.py  get_account_target.py  get_open_account_positions.py  get_trade_accounts_in_group.py  get_user_account.py  get_user_by_id.py  home.py  reset_account_positions.py  reset_password.py  reset_to_initial_balance.py  user_update.py  users.py
app/schemas/: change_group_request.py  create_account_request.py  create_account_response.py  enable_account_request.py  login_balance_request.py  login_request.py  login_symbol_request.py  request_by_login.py  reset_password_request.py  trade_account_group_request.py  user_update_request.py
libs/: manager.py  manager_helper.py
